--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IngredientsDetails"
-            android:label="@string/ingredients"
-            ></activity>
+        <receiver android:name=".RecipeWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_widget_info" />
+        </receiver>
+
+        <activity
+            android:name=".IngredientsDetails"
+            android:label="@string/ingredients">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".RecipeStep" />
+        </activity>
         <activity android:name=".RecipeStep" />
         <activity
             android:name=".RecipeDetails"
-            android:label="@string/recipe_name" />
-        <activity android:name=".MainActivity">
+            android:label="@string/recipe_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
